style: fix broken styles

--- a/src/components/Product/styles.module.scss
+++ b/src/components/Product/styles.module.scss
@@ -150,7 +150,7 @@
 .add {
   width: 250px;
   height: 50px;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .buttons-wrapper {
