--- a/src/pages/Basket/styles.module.scss
+++ b/src/pages/Basket/styles.module.scss
@@ -120,7 +120,7 @@
   align-items: center;
 }
 
-button {
+.button {
   padding: 7px 10px;
   border: 2px solid $accent-color;
   border-radius: 14px;
